; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_build_servername.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_build_servername.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i64 }

@MAX_COMPUTERNAME_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.view*)* @build_servername to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @build_servername(%struct.view* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.view*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.view* %0, %struct.view** %3, align 8
  %9 = load i32, i32* @MAX_COMPUTERNAME_LENGTH, align 4
  %10 = add nsw i32 %9, 1
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %4, align 8
  %13 = alloca i64, i64 %11, align 16
  store i64 %11, i64* %5, align 8
  %14 = call i32 @ARRAY_SIZE(i64* %13)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.view*, %struct.view** %3, align 8
  %16 = getelementptr inbounds %struct.view, %struct.view* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  store i32 1, i32* %8, align 4
  br label %39

20:                                               ; preds = %1
  %21 = call i32 @GetComputerNameW(i64* %13, i32* %7)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %20
  store i32* null, i32** %2, align 8
  store i32 1, i32* %8, align 4
  br label %39

24:                                               ; preds = %20
  store i64* %13, i64** %6, align 8
  br label %25

25:                                               ; preds = %34, %24
  %26 = load i64*, i64** %6, align 8
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %25
  %30 = load i64*, i64** %6, align 8
  %31 = load i64, i64* %30, align 8
  %32 = call i64 @toupperW(i64 %31)
  %33 = load i64*, i64** %6, align 8
  store i64 %32, i64* %33, align 8
  br label %34

34:                                               ; preds = %29
  %35 = load i64*, i64** %6, align 8
  %36 = getelementptr inbounds i64, i64* %35, i32 1
  store i64* %36, i64** %6, align 8
  br label %25

37:                                               ; preds = %25
  %38 = call i32* @SysAllocString(i64* %13)
  store i32* %38, i32** %2, align 8
  store i32 1, i32* %8, align 4
  br label %39

39:                                               ; preds = %37, %23, %19
  %40 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i32*, i32** %2, align 8
  ret i32* %41
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ARRAY_SIZE(i64*) #2

declare dso_local i32 @GetComputerNameW(i64*, i32*) #2

declare dso_local i64 @toupperW(i64) #2

declare dso_local i32* @SysAllocString(i64*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
